<?xml version="1.0" encoding="utf-8"?>
<resources>

	<string name="prefs">Preferences</string>
	<string name="pref_button_type">Select a Button Type</string>
	<string name="pref_button_type_desc">the graphics for the dialpad</string>

    <string name="app_name">Dialer</string>
    <string name="title">Dialer</string>
    <string name="button1">1</string>
    <string name="button1_sub"></string>
    <string name="button2">2</string>
    <string name="button2_sub">ABC</string>
    <string name="button3">3</string>
    <string name="button3_sub">DEF</string>
    <string name="button4">4</string>
    <string name="button4_sub">GHI</string>
    <string name="button5">5</string>
    <string name="button5_sub">JKL</string>
    <string name="button6">6</string>
    <string name="button6_sub">MNO</string>
    <string name="button7">7</string>
    <string name="button7_sub">PQRS</string>
    <string name="button8">8</string>
    <string name="button8_sub">TUV</string>
    <string name="button9">9</string>
    <string name="button9_sub">WXYZ</string>
    <string name="buttonStar">*</string>
    <string name="button0">0</string>
    <string name="buttonPound">#</string>
    
    <string name="clear_number">&lt;</string>
    <string name="pick_contact">Pick A Contact</string>
    <string name="pick_number">Which Number?</string>
    
    <string name="buttonDial">Dial Number</string>
</resources>
